<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/loginPage">

    <!-- Header -->
    <View
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:background="@drawable/bg"
     />
    <TextView
        android:id="@+id/welcome"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="111dp"
        android:layout_marginTop="60dp"
        android:elevation="15dp"
        android:gravity="center_horizontal|top"
        android:text="@string/app_name"
        android:textAppearance="@style/welcome" />

    <ImageView
        android:id="@+id/bg"
        android:layout_width="414dp"
        android:layout_height="600dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="3dp"
        android:scaleType="fitXY"
        android:src="@drawable/login_image" />

    <View
        android:id="@+id/rectangle3"
        android:layout_width="414dp"
        android:layout_height="400dp"
        android:layout_below="@id/bg"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="482dp"
        android:textAlignment="center"
        android:background="@drawable/rectangle_3" />

    <Button
        android:id="@+id/backButton"
        style="@style/backButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="56dp"
        android:elevation="30dp"
        app:icon="@drawable/ic_outline_keyboard_backspace"
        app:iconSize="30dp"
        app:iconTint="@null"/>


    <TextView
        android:id="@+id/welcomeBackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bg"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="-107dp"
        android:text="@string/welcomeBack"
        android:textAppearance="@style/welcomeBack" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bg"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-61dp"
        android:text="@string/loginDescription"
        android:textAppearance="@style/loginDescription" />

    <Button
        android:id="@+id/loginButton"
        style="@style/loginButton"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="726dp"
        android:layout_marginEnd="17dp"
        android:text="@string/loginText"
        android:textAppearance="@style/createAnAccount" />

    <TextView
        android:id="@+id/signUpDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="800dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="80dp"
        android:text="@string/signUpDescription"
        android:textAppearance="@style/alreadyHav" />

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="692dp"
        android:layout_marginEnd="21dp"
        android:text="@string/forgotPassword"
        android:textAppearance="@style/forgotPassword" />


    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bg"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edit_text_border"
        android:drawableStart="@drawable/lock_24px"
        android:drawableEnd="@drawable/visibility_off_24px"
        android:drawablePadding="20dp"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bg"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-31dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edit_text_border"
        android:drawableStart="@drawable/mail_24px"
        android:drawablePadding="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="#000000" />
</RelativeLayout>
</ScrollView>