<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/welcomePage">

    <!-- Header -->
    <View
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:background="@drawable/bg"
        android:elevation="10dp" />

    <!-- Background Image -->


    <ImageView
        android:id="@+id/bg"
        android:layout_width="414dp"
        android:layout_height="600dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="4dp"
        android:scaleType="fitXY"
        android:src="@drawable/welcome" />

    <View
        android:id="@+id/rectangle3"
        android:layout_width="414dp"
        android:layout_height="358dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="576dp"
        android:background="@drawable/rectangle_3" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="111dp"
        android:layout_marginTop="60dp"
        android:elevation="15dp"
        android:gravity="center_horizontal|top"
        android:text="@string/app_name"
        android:textAppearance="@style/welcome" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bg"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="1dp"
        android:text="@string/welcome"
        android:textAppearance="@style/welcome1" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bg"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="45dp"
        android:text="@string/welcomeDescription"
        android:textAppearance="@style/welcomeDescription" />

    <Button
        android:id="@+id/createAnAccount"
        style="@style/createAnAccount"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="710dp"
        android:layout_marginEnd="17dp"
        android:text="@string/createAnAcc"
        android:textAppearance="@style/createAnAccount"
        app:icon="@drawable/account_circle_outline"
        app:iconSize="30dp"
        app:iconTint="@null" />

    <TextView
        android:id="@+id/alreadyHav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="102dp"
        android:layout_marginTop="793dp"
        android:layout_marginRight="80dp"
        android:gravity="top"
        android:text="@string/alreadyHav"
        android:textAppearance="@style/alreadyHav" />


</RelativeLayout>
