<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgotPasswordPage">


        <TextView
            android:id="@+id/passwordRecoveryText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="79dp"
            android:layout_marginTop="34dp"
            android:elevation="15dp"
            android:gravity="center_horizontal|top"
            android:text="@string/passwordRecoveryText"
            android:textAppearance="@style/passwordRecoveryText" />

        <Button
            android:id="@+id/backButtonBlack"
            style="@style/backButtonBlack"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="26dp"
            android:elevation="30dp"
            app:icon="@drawable/arrow_back_black_24px"
            app:iconSize="30dp"
            app:iconTint="@null" />

        <TextView
            android:id="@+id/forgotPasswordText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="79dp"
            android:layout_marginTop="150dp"
            android:elevation="15dp"
            android:gravity="center_horizontal|top"
            android:text="@string/forgotPassword"
            android:textAppearance="@style/forgotPasswordPage" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/edit_text_border"
            android:drawableStart="@drawable/mail_24px"
            android:drawablePadding="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="#000000" />
        <Button
            android:id="@+id/resetPasswordButton"
            style="@style/loginButton"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="17dp"
            android:text="@string/sendLink"
            android:textAppearance="@style/createAnAccount" />
    </RelativeLayout>
</ScrollView>